Se adicionaron una vista de la busqueda

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ rio.sublime-workspace
 workspace.code-workspace
 imagenesEventos/
 cata-workspace.code-workspace
+catalogacion.sublime-project
+catalogacion.sublime-workspace
